src/objects/Operating_Schedule_Rule__c.object
<CustomObject>
    <description>This object is used to create rules related to the operating schedule.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Please indicate whether this rule should be active or not.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>From__c</fullName>
        <inlineHelpText>Please indicate the month of the year you want to push the creation of jobs for.</inlineHelpText>
        <label>From</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Machine_Clean_Operating_Months_Value</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Machine_Clean_Operating_Types__c</fullName>
        <inlineHelpText>Please select the type of machine clean operating job you want to change the creation date for.</inlineHelpText>
        <label>Machine Clean Operating Types</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Preventive Maintenance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Operating_Schedule__c</fullName>
        <label>Operating Schedule</label>
        <referenceTo>OperatingSchedule__c</referenceTo>
        <relationshipName>Operating_Scheduling_Rules</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Rule_Type__c</fullName>
        <label>Rule Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Modify Early Start</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>To__c</fullName>
        <inlineHelpText>Please indicate the month of the year you want to push the creation of jobs to.</inlineHelpText>
        <label>To</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Machine_Clean_Operating_Months_Value</valueSetName>
        </valueSet>
    </fields>
    <label>Operating Schedule Rule</label>
    <nameField>
        <displayFormat>OPSR-{0}</displayFormat>
        <label>Operating Scheduling Rule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Operating Schedule Rules</pluralLabel>
    <recordTypes>
        <fullName>Modify_Early_Start</fullName>
        <active>true</active>
        <description>This record type is used to indicate a change in the creation of jobs for Machine Clean Operating.</description>
        <label>Modify Early Start</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>